remains to be tested: load-excel.py

--- a/testin.ipynb
+++ b/testin.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "915e526c",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "757d5ca4",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "    lambda row: (pd.to_datetime(row['FinEvento']) - pd.to_datetime(row['InicioEvento'])).total_seconds() / 60,\n",
     "    axis=1\n",
     ")\n",
-    "df['Duracion'] = df['Duracion'].round(0).astype(int)\n",
+    "df['Duracion'] = df['Duracion'].round(0).astype(int).astype(str)\n",
     "cols = df.columns.tolist()\n",
     "duracion_index = cols.index('Duracion')  # Find where we temporarily added it\n",
     "cols.insert(15, cols.pop(duracion_index))  # Move it to position 14\n",
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "b60b0b98",
    "metadata": {},
    "outputs": [
